--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <div class="nav-bar">
             <div class="frame">
-                <div class="frame-1"><span class="home">Home</span></div>
+             <div class="frame-1"><span class="home">Home</span></div>
                 <div class="frame-2"><span class="find-work">Find Work</span></div>
                 <div class="frame-3"></div>
                 <div class="frame-4"><span class="about-us">About Us</span></div>
@@ -22,6 +22,8 @@
     <div class="header">
         <span class="find-your-next"
         >connect with clients , showcase your skills,and earn</span>
+        <div class="frame-5"><span class="find-work-6">Find Work!</span></div>
+      </div>
         <div class="submission-form">
             <span class="list-work">List of Work </span>
             <div class="group">
