--- a/welcome.html
+++ b/welcome.html
@@ -17,7 +17,7 @@
         <a href="login.html">Login</a>
       </div>
       <div class="button">
-        <a href="signin.html">Register</a>
+        <a href="register.html">Register</a>
       </div>
     </div>
   </div>
