--- a/main.html
+++ b/main.html
@@ -7,39 +7,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"/>
     <link rel="icon" type="nexidea icon" href="nexidea.png">
     <link rel="stylesheet" href="main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="main-container">
         <div class="nav-bar">
-            <div class="frame">
-             <div class="frame-1"><span class="home">Home</span></div>
-                <div class="frame-2"><span class="find-work">Find Work</span></div>
-                <div class="frame-3"></div>
-                <div class="frame-4"><span class="about-us">About Us</span></div>
-        </div>
-        <div class="whatsapp-image"></div>
+            <div class="whatsapp-image"></div>
+            <div class="option">
+                <div>Home</div>
+                <div>Find Work</div>
+                <div>About Us</div>
+                <div class="profile"></div>
+            </div>
     </div>
     <div class="header">
-        <span class="find-your-next"
-        >connect with clients , showcase your skills,and earn</span>
+        <div class="find-your-next"
+        >Find Your Next Work-From-Home Opportunity</div
+        ><div class="connect-clients"
+        >connect with clients , showcase your skills, and earn</div
+      >
         <div class="frame-5"><span class="find-work-6">Find Work!</span></div>
       </div>
-        <div class="submission-form">
-            <span class="list-work">List of Work </span>
-            <div class="group">
-                <div class="title-border">
-                    <div class="title"><span class="work-category">Title</span></div>
-                    </div>
-                    <div class="work-border">
-                        <div class="work">
-                            <span class="skills-border">Work Category</span>
-                        </div>
-                        </div>
-                        <div class="group-6">
-                            <div class="skills">
-                                <span class="skills-required">Skills Required</span>
-                                </div>div>
-                        </div>
+        
     <form action="submit" class="submission-form">
         <h1>List Your Work</h1>
         <input type="text" class="inputs name" placeholder="Your Name" required>
@@ -70,7 +59,7 @@
                 <li class="social-media-icons"><a href="https://x.com/?lang=en">
                         <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                             text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                            fill="white" width="56" clip-rule="evenodd" viewBox="0 0 512 462.799">
+                            fill="white" width="27" clip-rule="evenodd" viewBox="0 0 512 462.799">
                             <path fill-rule="nonzero"
                                 d="M403.229 0h78.506L310.219 196.04 512 462.799H354.002L230.261 301.007 88.669 462.799h-78.56l183.455-209.683L0 0h161.999l111.856 147.88L403.229 0zm-27.556 415.805h43.505L138.363 44.527h-46.68l283.99 371.278z" />
                         </svg>
