making buttons active

--- a/main.html
+++ b/main.html
@@ -14,21 +14,21 @@
         <div class="nav-bar">
             <div class="whatsapp-image"></div>
             <div class="option">
-                <div>Home</div>
-                <div>Find Work</div>
-                <div>About Us</div>
-                <div class="profile"></div>
+                <a href="#home"><div>Home</div></a>
+                <a href="#findwork"><div>Find Work</div></a>
+                <a href="#aboutus"><div>About Us</div></a>
+                <a href="#profile"><div class="profile"></div></a>
             </div>
     </div>
     <div class="header">
-        <div class="find-your-next"
-        >Find Your Next Work-From-Home Opportunity</div
-        ><div class="connect-clients"
-        >connect with clients , showcase your skills, and earn</div
-      >
-        <div class="frame-5"><span class="find-work-6">Find Work!</span></div>
-      </div>
-        
+        <div class="find-your-next">
+            Find Your Next Work-From-Home Opportunity
+        </div>
+        <div class="connect-clients">
+        connect with clients , showcase your skills, and earn</div>
+        <!-- <div class="frame-5"><span class="find-work-6">Find Work!</span></div>
+      </div> -->
+        <button class="frame-5">Find Work</button>
     <form action="submit" class="submission-form">
         <h1>List Your Work</h1>
         <input type="text" class="inputs name" placeholder="Your Name" required>
