--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
     <div class="register-section">
       <span>Don't have an account?</span>
-      <a href="signin.html">Register</a>
+      <a href="register.html">Register</a>
     </div>
   </div>
 </body>
