making all the buttons working

--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="nav-bar">
+        <div class="nav-bar" id="home">
             <div class="whatsapp-image"></div>
             <div class="option">
                 <a href="#home"><div>Home</div></a>
-                <a href="#findwork"><div>Find Work</div></a>
+                <a href="work.html"><div>Find Work</div></a>
                 <a href="#aboutus"><div>About Us</div></a>
-                <a href="#profile"><div class="profile"></div></a>
+                <a href="profile.html"><div class="profile"></div></a>
             </div>
     </div>
     <div class="header">
@@ -28,7 +28,7 @@
         connect with clients , showcase your skills, and earn</div>
         <!-- <div class="frame-5"><span class="find-work-6">Find Work!</span></div>
       </div> -->
-        <button class="frame-5">Find Work</button>
+       <a href="work.html"> <button class="frame-5">Find Work</button></a>
     <form action="submit" class="submission-form">
         <h1>List Your Work</h1>
         <input type="text" class="inputs name" placeholder="Your Name" required>
