--- a/work.html
+++ b/work.html
@@ -14,10 +14,10 @@
     <header>
         <div class="logo"></div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Find Work</a>
+            <a href="main.html">Home</a>
+            <a href="work.html">Find Work</a>
             <a href="#">About Us</a>
-            <a href="#profile"><div class="profile"></div></a>
+            <a href="profile.html"><div class="profile"></div></a>
         </nav>
 
     </header>
@@ -124,7 +124,7 @@
 
     <footer>
         <ul>
-            <li><a href="#home"> Home</a></li>
+            <li><a href="main.html"> Home</a></li>
             <li><a href="#">About Us</a</li>
             <li><a href="#">Features</a></li>
             <li><a href="#">Feedback</a></li>
