--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -12,7 +12,7 @@
       <img src="https://ui-avatars.com/api/?name=John+Doe&background=ffffff&color=4DB6AC" alt="Profile Picture" />
       <div>
         <h2>John Doe</h2>
-        <p>johndoe@example.com</p>
+        <a href="mailto:someone@example.com"><p>johndoe@example.com</p></a>
       </div>
     </div>
     <div class="right-section">
