--- a/frontend/work.html
+++ b/frontend/work.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="main.html">Home</a>
             <a href="work.html">Find Work</a>
-            <a href="#">About Us</a>
+            <a href="about us.html">About Us</a>
             <a href="profile.html"><div class="profile"></div></a>
         </nav>
 
@@ -125,9 +125,8 @@
     <footer>
         <ul>
             <li><a href="main.html"> Home</a></li>
-            <li><a href="#">About Us</a</li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Feedback</a></li>
+            <li><a href="about us.html">About Us</a</li>
+            <li><a href="feed back.html">Feedback</a></li>
         </ul>
         <div class="query-message-div">
             <h1 class="query-message">query-message</h1>
