--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login nexidea</title>
+  <title>Login Nexidea</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" />
   <link rel="icon" href="nexidea.png" />
   <link rel="stylesheet" href="login.css" />
- 
 </head>
 <body>
   <div class="overlay"></div>
   <div class="main-container">
     <h1>Login</h1>
-    <form action="login.php" method="post">
+    <form id="login-form">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" placeholder="Enter Your Email" required />
 
@@ -30,5 +29,40 @@
       <a href="register.html">Register</a>
     </div>
   </div>
+
+  <script>
+    document.getElementById("login-form").addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      try {
+        const response = await fetch("http://localhost:5000/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ email, password }),
+        });
+
+        const result = await response.json();
+
+        if (response.ok) {
+          if (result.success) {
+            alert("Login successful!");
+            window.location.href = "main.html";
+          } else {
+            alert(result.message || "Login failed");
+          }
+        } else {
+          alert("Login failed: " + result.message);
+        }
+      } catch (err) {
+        console.error("Login error:", err);
+        alert("Something went wrong. Please try again later.");
+      }
+    });
+  </script>
 </body>
 </html>
